# content-agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  inspect_memory.py  pyproject.toml  run.py
.next/: trace  trace-build
agent/: config.py  db.py  graph.py  llm.py  memory.py  state.py
agent/nodes/: critic.py  image_fetcher.py  planner.py  pre_researcher.py  researcher.py  writer.py
agent/prompts/: templates.py
agent/publish/: cover_prompt.py  wechat_api.py  wechat_html.py
agent/publish/themes/: default.css  elegant.css  grace.css  green.css  minimal.css  modern.css  red.css  warm.css
agent/tools/: image_gen.py  screenshot.py  search.py  unsplash.py
api/: server.py
web/: eslint.config.mjs  package.json
web/app/: globals.css  layout.tsx  page.tsx  theme.ts
web/app/components/: AntdProvider.tsx  ArticlePanel.tsx  InputPanel.tsx  PlatformIcons.tsx  PublishPanel.tsx  SettingsModal.tsx  StatusPanel.tsx  TopicList.tsx
web/app/lib/: constants.ts
