[project]
name = "content-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",   # OpenAI 规范（Kimi/DeepSeek/通义等均需要）
    "langchain-anthropic>=0.3", # Anthropic 规范（Claude 系列）
    "langgraph>=0.2",
    "tavily-python>=0.5",
    "requests>=2.32",
    "python-dotenv>=1.0",
    "langchain-chroma>=0.2",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "markdown>=3.7",
    "css-inline>=0.14",
    "Pygments>=2.18",
    "python-multipart>=0.0.18",
    "Pillow>=10.0",
]

